[gd_scene load_steps=13 format=3 uid="uid://bcmpmnuf7siwa"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://Assets/Main.theme" id="1_q5v3q"]
[ext_resource type="Script" path="res://Panels/Homepage/Homepage.gd" id="2_4m2c8"]
[ext_resource type="FontFile" uid="uid://crlak6jhg5jy2" path="res://Assets/Font/RubikMonoOne-Regular.ttf" id="3_us3ut"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_807x7"]
bg_color = Color(0.0666667, 0.0666667, 0.0784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t44cu"]
font = ExtResource("3_us3ut")
font_size = 99

[sub_resource type="Gradient" id="Gradient_lnc7h"]
colors = PackedColorArray(0.949187, 0.0117189, 0.462623, 1, 0.384451, 0, 0.823636, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ru7rt"]
gradient = SubResource("Gradient_lnc7h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5w20d"]
texture = SubResource("GradientTexture2D_ru7rt")
texture_margin_top = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_2gwin"]
font = ExtResource("3_us3ut")
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_1m4dk"]
font = ExtResource("3_us3ut")
font_size = 13

[sub_resource type="StyleBoxLine" id="StyleBoxLine_pxp84"]
color = Color(0.129412, 0.129412, 0.129412, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_huiu0"]
color = Color(0.129412, 0.129412, 0.129412, 1)
thickness = 2

[node name="Init" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q5v3q")
theme_override_styles/panel = SubResource("StyleBoxFlat_807x7")
script = ExtResource("2_4m2c8")
status = NodePath("HBoxContainer/MainText/VBoxContainer/SubTextContainer/Status")
address = NodePath("HBoxContainer/CenterContainer2/ConnectButtons/Address")
port = NodePath("HBoxContainer/CenterContainer2/ConnectButtons/Port")
main_buttons = NodePath("HBoxContainer/CenterContainer2/MainButtons")
connect_buttons = NodePath("HBoxContainer/CenterContainer2/ConnectButtons")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MainText" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MainText"]
layout_mode = 2

[node name="TitleContainer" type="Control" parent="HBoxContainer/MainText/VBoxContainer"]
custom_minimum_size = Vector2(684.2, 101.33)
layout_mode = 2

[node name="Title" type="Label" parent="HBoxContainer/MainText/VBoxContainer/TitleContainer"]
layout_mode = 2
offset_right = 514.0
offset_bottom = 92.0
text = "Spectrum"
label_settings = SubResource("LabelSettings_t44cu")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MainText/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxTexture_5w20d")

[node name="SubTextContainer" type="HBoxContainer" parent="HBoxContainer/MainText/VBoxContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="HBoxContainer/MainText/VBoxContainer/SubTextContainer"]
layout_mode = 2
text = "V0.5.0"
label_settings = SubResource("LabelSettings_2gwin")

[node name="Status" type="Label" parent="HBoxContainer/MainText/VBoxContainer/SubTextContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Not Connected"
label_settings = SubResource("LabelSettings_1m4dk")

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainButtons" type="VBoxContainer" parent="HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="ConnectToServer" type="Button" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_us3ut")
theme_override_font_sizes/font_size = 24
text = "Connect to Server"
flat = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_pxp84")

[node name="Create" type="Button" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_us3ut")
theme_override_font_sizes/font_size = 24
text = "Create New Server"
flat = true

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_huiu0")

[node name="Settings" type="Button" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_us3ut")
theme_override_font_sizes/font_size = 24
text = "Settings"
flat = true

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_huiu0")

[node name="Exit" type="Button" parent="HBoxContainer/CenterContainer2/MainButtons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_us3ut")
theme_override_font_sizes/font_size = 24
text = "Exit"
flat = true

[node name="ConnectButtons" type="VBoxContainer" parent="HBoxContainer/CenterContainer2"]
visible = false
custom_minimum_size = Vector2(353.66, 0)
layout_mode = 2

[node name="Address" type="LineEdit" parent="HBoxContainer/CenterContainer2/ConnectButtons"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP Address"
virtual_keyboard_type = 2
clear_button_enabled = true
caret_blink = true

[node name="Port" type="LineEdit" parent="HBoxContainer/CenterContainer2/ConnectButtons"]
layout_mode = 2
text = "3824"
placeholder_text = "Port"
virtual_keyboard_type = 2
clear_button_enabled = true
caret_blink = true

[node name="Connect" type="Button" parent="HBoxContainer/CenterContainer2/ConnectButtons"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0.054902, 0.47451, 0.964706, 1)
theme_override_fonts/font = ExtResource("3_us3ut")
theme_override_font_sizes/font_size = 24
text = "Connect"
flat = true

[connection signal="pressed" from="HBoxContainer/CenterContainer2/MainButtons/ConnectToServer" to="." method="_on_connect_to_server_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/MainButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="HBoxContainer/CenterContainer2/ConnectButtons/Connect" to="." method="_on_connect_pressed"]
